Potential fix for blurry mobile background.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@ body {
     user-select: none;
     margin: 0;
     background-image: url('../media/textures/grass.png');
-    background-size: 11%;
+    background-size: 64px 64px;
     background-repeat: repeat;
     image-rendering: pixelated; 
     image-rendering: crisp-edges;
